fix: text align when button width changed

--- a/packages/design/components/Button/style/index.less
+++ b/packages/design/components/Button/style/index.less
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   text-align: center;
+  justify-content: center;
   height: var(--height);
   border-radius: calc(var(--height) / 2);
   padding: 0 var(--padding);
